[tool.poetry]
name = "pipelines"
version = "0.1.0"
description = "Pipelines for dagster are defined here. Dagster allows multiple workspaces for different teams/users."
authors = ["Malte Hedderich <malte.hedderich@serviceware.de>"]

[tool.poetry.dependencies]
python = "^3.8"
dagster = "^0.14.8"

[tool.poetry.dev-dependencies]
flake8 = "^4.0.1"
black = "^22.3.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
