[tool.poetry]
name = "dagster-repo"
version = "0.2.0"
description = "Pipelines for dagster are defined here. Dagster allows multiple workspaces for different teams/users."
authors = ["Malte Hedderich <malte.hedderich@serviceware.de>"]

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
dagster = "^0.14.12"
pandas = "^1.4.2"
scipy = "^1.8.0"
sklearn = "^0.0"
dagster-postgres = "^0.14.12"
dagster-docker = "^0.14.12"

[tool.poetry.dev-dependencies]
black = "^22.3.0"
flake8 = "^4.0.1"

[build-system]
requires = ["setuptools>=62","poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
