[tool.poetry]
name = "dagster-repo"
version = "0.2.0"
description = "Pipelines for dagster are defined here. Dagster allows multiple workspaces for different teams/users."
authors = ["Malte Hedderich <malte.hedderich@serviceware.de>"]

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
dagster = "^0.14.12"
pandas = "^1.4.2"
scipy = "^1.8.0"
sklearn = "^0.0"
dagster-postgres = "^0.14.12"
dagster-docker = "^0.14.12"
dagster-mlflow = "^0.14.12"
boto3 = "^1.22.0"
minio = "^7.1.7"
dvc = "^2.10.2"
protobuf = "^3.20.1"
bentoml = "^0.13.1"
dagster-aws = "^0.14.14"
python-dotenv = "^0.20.0"
docker = "^5.0.3"
tensorflow-hub = "^0.12.0"
tensorflow = "^2.9.0"
tensorflow-text = "^2.9.0"

[tool.poetry.dev-dependencies]
black = "^22.3.0"
flake8 = "^4.0.1"

[build-system]
requires = ["setuptools>=62","poetry-core"]
build-backend = "poetry.core.masonry.api"
